# nanoowl-adaone

./: .gitignore  ADAONE_SYSTEM_CHANGES.md  NANOOWL_MODEL_SWAP_HANDOFF.md  README.md  instructions.md  manual.md
CARKit/src/ada/: package.xml  setup.py
CARKit/src/ada/ada/: object_position.py  reactive_behavior_controller.py  scene_aware_query_manager.py
CARKit/src/ada/launch/: nanoowl_camera_reactive_demo.launch.py
ada_system/: vesc_usb0_test.yaml
eval/coco/: analysis_and_comparison_2026-04-08.md  analysis_and_comparison_2026-04-09.md  coco_results_baseline_100_cpu.json  coco_summary_baseline_100_cpu.json  coco_summary_baseline_full_cuda_trt.json  coco_summary_owlvit_deal_imagenet_step55_full_cuda_trt_fp16.json  coco_summary_owlvit_deal_imagenet_step55_full_cuda_trt_stock_opset17.json
src/ROS2-NanoOWL/launch/: camera_input_example.launch.py  nano_owl_example.launch.py
src/ROS2-NanoOWL/ros2_nanoowl/: nano_owl_py.py
src/demos/composition/: CHANGELOG.rst  README.md  package.xml
src/demos/demo_nodes_cpp/: CHANGELOG.rst  package.xml
src/demos/demo_nodes_cpp_native/: CHANGELOG.rst  package.xml
src/demos/demo_nodes_py/: CHANGELOG.rst  package.xml  setup.py
src/demos/image_tools/: CHANGELOG.rst  package.xml
src/demos/intra_process_demo/: CHANGELOG.rst  package.xml
src/demos/lifecycle/: CHANGELOG.rst  README.rst  package.xml
src/demos/lifecycle_py/: CHANGELOG.rst  package.xml  setup.py
src/demos/logging_demo/: CHANGELOG.rst  package.xml
src/demos/pendulum_control/: CHANGELOG.rst  package.xml
src/torch2trt/: snapd_24724.assert
(+34 files in other folders)
