<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada</name>
  <version>0.0.0</version>
  <description>Ada autonomous driving system integration package</description>
  <maintainer email="ada@todo.todo">ada</maintainer>
  <license>TODO: License declaration</license>

  <!-- Change the build tool dependency to ament_python -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- If your package has dependencies, keep them as exec_depend -->
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>lidar_localization_ros2</exec_depend>
  <exec_depend>util</exec_depend>
  <exec_depend>control_center</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Specify that this is a Python package -->
    <build_type>ament_python</build_type>
  </export>
</package>
